gccida/g1/sched_analyze_1
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/sched_analyze_1/src/sched-deps.c:1015:24: error: unknown type name 'deps_0'
void  sched_analyze_1( deps_0 *deps, rtx x, rtx insn) 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/sched_analyze_1/src/sched-deps.c:1038:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v3.rtwint = ( __int64)x->fld[0]; 
                      ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/sched_analyze_1/src/sched-deps.c:1067:33: error: use of undeclared identifier 'machine_mode'
cselib_lookup( t->fld[0].rtx, ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), 1); 
                                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/sched_analyze_1/src/sched-deps.c:1077:66: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( i = deps->pending_read_mems; pending_read_insns; i = ( rtx)i[1] ) 
                                                                 ^~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/sched_analyze_1/src/sched-deps.c:1081:28: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
pending_read_insns = ( rtx)pending_read_insns[1]; 
                           ^~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/sched_analyze_1/src/sched-deps.c:1084:68: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( j = deps->pending_write_mems; pending_write_insns; j = ( rtx)j[1] ) 
                                                                   ^~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/sched_analyze_1/src/sched-deps.c:1088:29: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
pending_write_insns = ( rtx)pending_write_insns[1]; 
                            ^~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/sched_analyze_1/src/sched-deps.c:1134:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v12 = ( ( unsigned int)( mode_class_0[*( unsigned __int8 *)( v3.rtwint + 2)] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/sched_analyze_1/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/sched_analyze_1/src/obj/sched-deps.o] Error 1
